# Camera-Based-Vehicle-Position-Estimation

./: CMakeLists.txt  README.md  installEigenLibrary.sh
src/: CameraDriver.cpp  CameraDriver.h  CameraServer.cpp  CameraServer.h  ImageServer.cpp  ImageServer.h  ImageTransformer.cpp  ImageTransformer.h  MessageQueue.cpp  MessageQueue.h  MovableImageData.cpp  MovableImageData.h  MovableTimestampedType.cpp  MovableTimestampedType.h  PositionEstimationService.cpp  PositionEstimationService.h  PositionEstimator.cpp  PositionEstimator.h  PositionServer.cpp  PositionServer.h  PositionService.cpp  PositionService.h  RecordServer.cpp  RecordServer.h  RunnableEntity.cpp  RunnableEntity.h  RuntimeEnvironment.h  Types.h  main.cpp
